--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div id="planner-tabs"></div>
         <div class="header-btns">
             <span onclick="createNewList()" style="font-size: 24px; color: var(--text-dim); cursor: pointer; padding-left: 10px;">+</span>
-            <div onclick="auth.signOut()" class="out-btn">OUT</div>
+            <div onclick="auth.signOut()" class="out-btn">SIGN OUT</div>
         </div>
     </div>
     <div id="content">
