--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             --bg-dark: #121212; --bg-card: #1e1e1e; --sidebar-bg: #181818;
             --border: #2a2a2a; --text-main: #ffffff; --text-dim: #888888;
             --accent: #333333; 
-            --radius: 50px; 
+            --radius: 55px; 
         }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         
@@ -108,7 +108,7 @@
         <div id="planner-tabs"></div>
         <div class="header-btns">
             <span onclick="createNewList()" style="font-size: 24px; color: var(--text-dim); cursor: pointer; padding-left: 10px;">+</span>
-            <div onclick="auth.signOut()" class="out-btn">OUT</div>
+            <div onclick="auth.signOut()" class="out-btn">SIGN OUT</div>
         </div>
     </div>
     <div id="content"><span id="list-label">List</span><div id="task-list"></div></div>
