--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
             haptic();
             moveMode = p;
             render();
+            clearSelection();
         }, 650);
     }
     function cancelPress() { clearTimeout(pressTimer); }
