--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         
         .nav-tab { 
             position: relative;
+            user-select: none;
             padding: 8px 18px; border-radius: 20px; color: var(--text-dim); 
             font-size: 15px; font-weight: 600; white-space: nowrap; 
             transition: all 0.2s ease; border: 1px solid transparent;
