--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>DarkPlan Pro</title>
+    <title>Agenda</title>
 
     <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23121212'/%3E%3Crect x='20' y='25' width='60' height='55' rx='5' stroke='white' stroke-width='6' fill='none'/%3E%3Cpath d='M20 40h60M35 20v10M65 20v10' stroke='white' stroke-width='6' stroke-linecap='round'/%3E%3C/svg%3E">
     
@@ -100,7 +100,7 @@
 <body oncontextmenu="return false;">
 
 <div id="login-overlay">
-    <h1 style="color:white; font-size:32px; margin-bottom:20px;">DarkPlan</h1>
+    <h1 style="color:white; font-size:32px; margin-bottom:20px;">Agenda</h1>
     <button class="save-btn" style="width:auto; padding:0 40px;" onclick="popLogin()">Sign in with Google</button>
 </div>
 
