--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </div>
         <button class="save-btn" onclick="saveTask()">Add to List</button>
-        <div class="footer-tip">Tap above to save entry</div>
+        <div class="footer-tip">Hold on tabs at the top to edit or delete them!</div>
     </div>
 </div>
 
