--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <button class="save-btn" onclick="saveTask()">Add to List</button>
-        <div class="footer-tip">Hold on tabs at the top to edit or delete them!</div>
+        <div class="footer-tip">Press and hold on tabs at the top to edit or delete them!</div>
     </div>
 </div>
 
