--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
         #app { display: none; flex-direction: column; height: 100vh; }
         
-        /* TOP BAR SYMMETRY */
         #nav-bar { 
             background-color: var(--sidebar-bg); border-bottom: 1px solid var(--border); 
             height: calc(var(--bar-height) + env(safe-area-inset-top));
@@ -46,15 +45,13 @@
         @keyframes shake { 0% { transform: rotate(-1.5deg); } 50% { transform: rotate(1.5deg); } 100% { transform: rotate(-1.5deg); } }
 
         #content { flex: 1; overflow-y: auto; padding: 20px; padding-bottom: 240px; }
-        .entry-card { background: var(--bg-card); border: 1px solid var(--border); border-radius: var(--radius); padding: 18px 25px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; }
+        .entry-card { background: var(--bg-card); border: 1px solid var(--border); border-radius: var(--radius); padding: 18px 25px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; min-height: 100px; }
         
-        /* EDITING UI */
-        .edit-container { display: flex; align-items: center; width: 100%; gap: 15px; }
+        .edit-container { display: flex; align-items: center; width: 100%; gap: 12px; }
         .edit-fields { display: flex; flex-direction: column; gap: 8px; flex: 1; }
-        .edit-input { background: #000; border: 1px solid var(--border); color: white; border-radius: 15px; padding: 10px 15px; font-size: 14px; width: 100%; }
-        .edit-actions { display: flex; flex-direction: column; gap: 10px; align-items: center; justify-content: center; }
+        .edit-input { background: #000; border: 1px solid var(--border); color: white; border-radius: 18px; padding: 12px 15px; font-size: 14px; width: 100%; height: 45px; }
+        .edit-actions { display: flex; flex-direction: column; gap: 8px; align-items: center; width: 40px; }
 
-        /* FOOTER SYMMETRY */
         #footer { 
             position: fixed; bottom: 0; left: 0; right: 0; 
             background: rgba(25, 25, 25, 0.98); backdrop-filter: blur(30px); 
@@ -225,8 +222,8 @@
                             <input type="date" class="edit-input" id="edDate${e.id}" value="${e.date}">
                         </div>
                         <div class="edit-actions">
-                            <div onclick="updateTask(event, '${e.id}', {name: document.getElementById('edName${e.id}').value, date: document.getElementById('edDate${e.id}').value})" style="color:#34c759; font-weight:900; font-size:22px;">✓</div>
-                            <div onclick="editingId=null; render();" style="color:#ff453a; font-weight:900; font-size:20px;">✕</div>
+                            <div onclick="updateTask(event, '${e.id}', {name: document.getElementById('edName${e.id}').value, date: document.getElementById('edDate${e.id}').value})" style="color:#34c759; font-weight:900; font-size:24px;">✓</div>
+                            <div onclick="editingId=null; render();" style="color:#ff453a; font-weight:900; font-size:22px;">✕</div>
                         </div>
                     </div>
                 </div>`;
