--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
         #content { flex: 1; overflow-y: auto; padding: 20px; padding-bottom: 240px; }
         .entry-card { background: var(--bg-card); border: 1px solid var(--border); border-radius: var(--radius); padding: 18px 25px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; min-height: 100px; }
         
+        /* EDITING UI - UNIFIED SIZING */
         .edit-container { display: flex; align-items: center; width: 100%; gap: 12px; }
         .edit-fields { display: flex; flex-direction: column; gap: 8px; flex: 1; }
-        .edit-input { background: #000; border: 1px solid var(--border); color: white; border-radius: 18px; padding: 12px 15px; font-size: 14px; width: 100%; height: 45px; }
+        .edit-input { 
+            background: #000; border: 1px solid var(--border); color: white; 
+            border-radius: 18px; padding: 0 15px; font-size: 14px; 
+            width: 100%; height: 45px; display: flex; align-items: center;
+        }
+        /* Style specifically for the date input to match the text input */
+        input[type="date"].edit-input { -webkit-appearance: none; display: block; line-height: 45px; }
+
         .edit-actions { display: flex; flex-direction: column; gap: 8px; align-items: center; width: 40px; }
 
         #footer { 
