--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Agenda Pro | Full Build</title>
+    <title>Agenda Pro | Full System</title>
 
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
@@ -11,6 +11,7 @@
 
     <style>
         :root {
+            /* Default Dark (Midnight) */
             --bg: #000000;
             --card: #1c1c1e;
             --border: #2c2c2e;
@@ -22,11 +23,27 @@
             --safe-bottom: env(safe-area-inset-bottom, 20px);
         }
 
-        /* Themes */
-        body.theme-midnight { --bg: #000; --card: #111; --accent: #5856d6; --border: #1a1a1a; }
-        body.theme-emerald { --bg: #040d06; --card: #0d1a10; --accent: #34c759; --border: #152a1a; }
-        body.theme-sunset { --bg: #0d0404; --card: #1a0d0d; --accent: #ff375f; --border: #2a1515; }
-        body.theme-ocean { --bg: #040b0d; --card: #0d161a; --accent: #0a84ff; --border: #15232a; }
+        /* --- THEME LIBRARY --- */
+        body.theme-light {
+            --bg: #f2f2f7; --card: #ffffff; --border: #d1d1d6;
+            --text: #000000; --dim: #636366; --accent: #007aff;
+        }
+        body.theme-paper {
+            --bg: #f9f5eb; --card: #ffffff; --border: #e4dccf;
+            --text: #1c2b2d; --dim: #7d9d9c; --accent: #eb6440;
+        }
+        body.theme-nord {
+            --bg: #2e3440; --card: #3b4252; --border: #4c566a;
+            --text: #eceff4; --dim: #a3be8c; --accent: #88c0d0;
+        }
+        body.theme-emerald {
+            --bg: #040d06; --card: #0d1a10; --border: #152a1a;
+            --text: #e8f5e9; --dim: #81c784; --accent: #34c759;
+        }
+        body.theme-sunset {
+            --bg: #0d0404; --card: #1a0d0d; --border: #2a1515;
+            --text: #fff5f5; --dim: #e57373; --accent: #ff375f;
+        }
 
         * { 
             box-sizing: border-box; 
@@ -42,6 +59,7 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
+            transition: background 0.4s ease, color 0.4s ease;
         }
 
         #app-shell {
@@ -58,12 +76,11 @@
             border-radius: 40px;
         }
 
-        /* FIXED HEADER: Increased padding to prevent cutoff */
+        /* HEADER: Increased padding to ensure no cutoff */
         header {
-            padding-top: calc(var(--safe-top) + 25px);
+            padding-top: calc(var(--safe-top) + 40px); 
             padding-bottom: 20px;
-            background: rgba(0,0,0,0.8);
-            backdrop-filter: blur(25px);
+            background: var(--bg);
             border-bottom: 1px solid var(--border);
             z-index: 100;
         }
@@ -76,9 +93,8 @@
             padding: 0 25px;
         }
 
-        .header-top h1 { margin: 0; font-size: 32px; font-weight: 800; letter-spacing: -1px; }
+        .header-top h1 { margin: 0; font-size: 34px; font-weight: 800; letter-spacing: -1.2px; }
 
-        /* SCROLLER: Fixed horizontal behavior */
         .nav-scroller {
             display: flex;
             gap: 12px;
@@ -98,15 +114,16 @@
             font-size: 14px;
             font-weight: 700;
             border: 1px solid var(--border);
-            transition: all 0.3s ease;
+            transition: all 0.2s ease;
         }
         .tab-pill.active {
             background: var(--accent);
-            color: #000;
+            color: #fff;
             border-color: var(--accent);
         }
+        body:not(.theme-light):not(.theme-paper) .tab-pill.active { color: #000; }
 
-        main { flex: 1; overflow-y: auto; padding: 25px; padding-bottom: 300px; }
+        main { flex: 1; overflow-y: auto; padding: 25px; padding-bottom: 320px; }
         
         .month-section { margin-bottom: 40px; }
         .month-label {
@@ -117,8 +134,7 @@
             font-weight: 900;
             margin-bottom: 20px;
             display: flex;
-            align-items: center;
-            gap: 15px;
+            align-items: center; gap: 15px;
         }
         .month-label::after { content: ""; height: 1px; background: var(--border); flex: 1; }
 
@@ -131,6 +147,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.03);
         }
 
         .card-body b { display: block; font-size: 18px; margin-bottom: 6px; }
@@ -151,7 +168,8 @@
         .modal-overlay.active { display: flex; opacity: 1; }
 
         .modal-sheet {
-            background: #1c1c1e;
+            background: var(--card);
+            color: var(--text);
             width: 100%;
             max-width: 500px;
             border-radius: 40px 40px 0 0;
@@ -163,37 +181,35 @@
         }
         .modal-overlay.active .modal-sheet { transform: translateY(0); }
 
+        .theme-btn {
+            height: 50px; border-radius: 15px; border: 2px solid var(--border);
+            cursor: pointer; font-weight: 700; font-size: 13px;
+        }
+
         /* SETTINGS UI */
         .settings-item {
-            background: #2c2c2e;
+            background: var(--bg);
             padding: 18px 22px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 1px solid #3a3a3c;
+            border-bottom: 1px solid var(--border);
             font-size: 16px;
         }
         .settings-item:first-child { border-radius: 20px 20px 0 0; }
         .settings-item:last-child { border-radius: 0 0 20px 20px; border-bottom: none; }
 
         .build-footer {
-            text-align: center;
-            margin-top: 30px;
-            color: #555;
-            font-size: 11px;
-            font-family: monospace;
-            letter-spacing: 1.5px;
+            text-align: center; margin-top: 30px;
+            color: var(--dim); font-size: 11px; font-family: monospace;
+            letter-spacing: 1.5px; opacity: 0.6;
         }
 
         /* FOOTER */
         footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            padding: 25px;
-            padding-bottom: calc(var(--safe-bottom) + 20px);
-            background: linear-gradient(to top, var(--bg) 70%, transparent);
+            position: fixed; bottom: 0; left: 0; right: 0;
+            padding: 25px; padding-bottom: calc(var(--safe-bottom) + 20px);
+            background: linear-gradient(to top, var(--bg) 80%, transparent);
             z-index: 50;
         }
 
@@ -202,24 +218,28 @@
             border: 1px solid var(--border);
             border-radius: 35px;
             padding: 15px;
-            box-shadow: 0 15px 50px rgba(0,0,0,0.7);
+            box-shadow: 0 15px 50px rgba(0,0,0,0.1);
         }
 
         .input-row { display: flex; gap: 12px; margin-bottom: 12px; }
-        input, select { background: #000; border: 1px solid var(--border); color: #fff; padding: 16px; border-radius: 20px; font-size: 16px; width: 100%; }
+        input, select { 
+            background: var(--bg); border: 1px solid var(--border); 
+            color: var(--text); padding: 16px; border-radius: 20px; 
+            font-size: 16px; width: 100%; 
+        }
 
         .btn-prime { width: 100%; padding: 20px; border-radius: 22px; border: none; font-weight: 900; text-transform: uppercase; cursor: pointer; }
-        .btn-add { background: #fff; color: #000; }
-        .btn-save { background: var(--accent); color: #000; }
+        .btn-add { background: var(--text); color: var(--bg); }
+        .btn-save { background: var(--accent); color: #fff; }
 
         #login-screen { position: fixed; inset: 0; background: #000; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 5000; }
     </style>
 </head>
-<body>
+<body class="theme-midnight">
 
     <div id="login-screen">
-        <h1 style="font-size:48px; margin-bottom:15px;">Agenda.</h1>
-        <button class="btn-prime" style="width:auto; padding: 20px 60px;" onclick="handleLogin()">Sign In with Google</button>
+        <h1 style="font-size:48px; margin-bottom:15px; color:white;">Agenda.</h1>
+        <button class="btn-prime" style="width:auto; padding: 20px 60px; background:white; color:black;" onclick="handleLogin()">Sign In with Google</button>
     </div>
 
     <div id="modal-settings" class="modal-overlay" onclick="closeAllModals()">
@@ -230,27 +250,29 @@
             </div>
 
             <div style="margin-bottom:30px;">
-                <p style="font-size:11px; color:var(--dim); text-transform:uppercase; font-weight:800; margin-bottom:15px;">Appearance</p>
-                <div style="display:grid; grid-template-columns: 1fr 1fr; gap:12px;">
-                    <button class="tab-pill" onclick="setTheme('theme-midnight')">Midnight</button>
-                    <button class="tab-pill" onclick="setTheme('theme-emerald')">Emerald</button>
-                    <button class="tab-pill" onclick="setTheme('theme-sunset')">Sunset</button>
-                    <button class="tab-pill" onclick="setTheme('theme-ocean')">Ocean</button>
+                <p style="font-size:11px; color:var(--dim); text-transform:uppercase; font-weight:800; margin-bottom:15px;">Full Themes</p>
+                <div style="display:grid; grid-template-columns: 1fr 1fr 1fr; gap:10px;">
+                    <button class="theme-btn" style="background:#000; color:#fff;" onclick="setTheme('theme-midnight')">Dark</button>
+                    <button class="theme-btn" style="background:#f2f2f7; color:#000;" onclick="setTheme('theme-light')">Light</button>
+                    <button class="theme-btn" style="background:#f9f5eb; color:#1c2b2d;" onclick="setTheme('theme-paper')">Paper</button>
+                    <button class="theme-btn" style="background:#2e3440; color:#eceff4;" onclick="setTheme('theme-nord')">Nord</button>
+                    <button class="theme-btn" style="background:#040d06; color:#e8f5e9;" onclick="setTheme('theme-emerald')">Green</button>
+                    <button class="theme-btn" style="background:#0d0404; color:#fff5f5;" onclick="setTheme('theme-sunset')">Red</button>
                 </div>
             </div>
 
-            <div>
+            <div style="margin-bottom:30px;">
                 <p style="font-size:11px; color:var(--dim); text-transform:uppercase; font-weight:800; margin-bottom:15px;">Manage Lists</p>
-                <div id="settings-agendas-list"></div>
+                <div id="settings-agendas-list" style="border: 1px solid var(--border); border-radius:20px; overflow:hidden;"></div>
             </div>
 
-            <div class="settings-item" onclick="auth.signOut()" style="margin-top:20px; border-radius:20px; color:var(--error); font-weight:700;">
+            <div class="settings-item" onclick="auth.signOut()" style="border-radius:20px; color:var(--error); font-weight:700; background: var(--bg); cursor:pointer;">
                 <span>Sign Out</span>
                 <span>→</span>
             </div>
 
             <div class="build-footer">
-                VERSION 2.2.0 <br>
+                VERSION 2.3.0 <br>
                 BUILD 2026.02.15_RELEASE
             </div>
         </div>
@@ -308,7 +330,7 @@
 
         let activeTab = 'General';
         let allTasks = [];
-        let agendas = JSON.parse(localStorage.getItem('agendas_v3')) || [{id:'General', type:'Standard'}, {id:'Releases', type:'Countdown'}];
+        let agendas = JSON.parse(localStorage.getItem('agendas_v4')) || [{id:'General', type:'Standard'}, {id:'Releases', type:'Countdown'}];
         let editId = null;
 
         function handleLogin() { auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }
@@ -345,8 +367,8 @@
             setTimeout(() => document.querySelectorAll('.modal-overlay').forEach(m => m.style.display = 'none'), 400);
         }
 
-        function setTheme(t) { document.body.className = t; localStorage.setItem('theme_v3', t); }
-        if(localStorage.getItem('theme_v3')) setTheme(localStorage.getItem('theme_v3'));
+        function setTheme(t) { document.body.className = t; localStorage.setItem('theme_v4', t); }
+        if(localStorage.getItem('theme_v4')) setTheme(localStorage.getItem('theme_v4'));
 
         function createNewAgenda() {
             const n = document.getElementById('n-list-name').value.trim();
@@ -354,7 +376,7 @@
             if(!n) return;
             agendas.push({id: n, type: t});
             activeTab = n;
-            localStorage.setItem('agendas_v3', JSON.stringify(agendas));
+            localStorage.setItem('agendas_v4', JSON.stringify(agendas));
             document.getElementById('n-list-name').value = '';
             closeAllModals();
             render();
@@ -386,7 +408,7 @@
 
         function render() {
             document.getElementById('tab-bar').innerHTML = agendas.map(a => `<div class="tab-pill ${a.id === activeTab ? 'active' : ''}" onclick="activeTab='${a.id}'; render();">${a.id}</div>`).join('');
-            document.getElementById('settings-agendas-list').innerHTML = agendas.map(a => `<div class="settings-item"><span>${a.id}</span><span style="color:var(--error); font-weight:700; cursor:pointer;" onclick="agendas=agendas.filter(x=>x.id!=='${a.id}'); localStorage.setItem('agendas_v3',JSON.stringify(agendas)); render();">Delete</span></div>`).join('');
+            document.getElementById('settings-agendas-list').innerHTML = agendas.map(a => `<div class="settings-item"><span>${a.id}</span><span style="color:var(--error); font-weight:700; cursor:pointer;" onclick="agendas=agendas.filter(x=>x.id!=='${a.id}'); localStorage.setItem('agendas_v4',JSON.stringify(agendas)); render();">Delete</span></div>`).join('');
 
             const main = document.getElementById('main-content');
             main.innerHTML = '';
