--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <h1>Agenda</h1>
                 <div style="display:flex; gap:20px; align-items:center;">
                     <span style="font-size:36px; font-weight:200; cursor:pointer;" onclick="openModal('modal-new-list')">+</span>
-                    <span style="font-size:22px; cursor:pointer;" onclick="openModal('modal-settings')">⚙️</span>
+                    <span style="font-size:22px; cursor:pointer;" onclick="openModal('modal-settings')">⚙</span>
                 </div>
             </div>
             <div class="nav-scroller" id="tab-bar"></div>
